# ClustIce

./: .gitignore  Makefile  Pipfile  README.md  README.md.j2  clustice.ipynb  d-module.vesta  demo.ipynb  dmodule.ipynb  pyproject.toml  replacer.py  requirements.txt  sample.py  setup.py  temp_README.md  test.py  test2.py  test3.py  test_pbc.py
clustice/: __init__.py  coder.py  dipole.py  geometry.py  graph.py  gromacs.py  topology.py  water.py
docs/: clustice.html  geometry.html  graph.html  gromacs.html  index.html  search.js  serialize.html  water.html
docs/clustice/: geometry.html  graph.html  gromacs.html  serialize.html  water.html
tanaka_cg/: .gitignore  2gro.ipynb  Makefile
test/: topo_vs_geo.ipynb
