[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "ClustIce"
version = "0.3" # major.minor.fix
authors = [
  { name="Masakazu Matsumoto", email="vitroid@gmail.com" },
]
description = "An ice cluster generator."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "networkx", "pairlist", "genice-core>=0.3"]

[project.urls]
"Homepage" = "https://github.com/vitroid/ClustIce"
"Bug Tracker" = "https://github.com/vitroid/ClustIce/issues"

